# UAO-Neumonia

./: .gitignore  Dockerfile  README.md  detector_neumonia.py  main.py  pyproject.toml
.github/: copilot-instructions.md
tests/: conftest.py  test_predict.py
