[project]
name = "uao-neumonia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "img2pdf>=0.6.3",
    "numpy>=2.2.6",
    "opencv-python>=4.13.0.90",
    "pandas>=2.3.3",
    "pillow>=12.1.0",
    "pyautogui>=0.9.54",
    "pydicom>=3.0.1",
    "tensorflow>=2.20.0",
    "tkcap>=0.0.4",
]
